add music and interface

--- a/Task_2_3_1/build.gradle
+++ b/Task_2_3_1/build.gradle
@@ -32,7 +32,7 @@ application {
 
 javafx {
   version = '21'
-  modules = ['javafx.controls', 'javafx.fxml']
+  modules = ['javafx.controls', 'javafx.fxml', 'javafx.media']
 }
 
 dependencies {
@@ -41,6 +41,7 @@ dependencies {
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
   testImplementation platform('org.junit:junit-bom:5.10.0')
   testImplementation 'org.junit.jupiter:junit-jupiter'
+  implementation 'org.openjfx:javafx-media:21.0.2'
 }
 
 test {
