--- a/Task_2_4_1/gradle/wrapper/gradle-wrapper.properties
+++ b/Task_2_4_1/gradle/wrapper/gradle-wrapper.properties
@@ -4,3 +4,4 @@ distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.8-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+org.gradle.jvmargs=--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
