--- a/Task_2_4_1/build.gradle
+++ b/Task_2_4_1/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.codehaus.groovy:groovy-all:3.0.19'
+    testImplementation 'org.mockito:mockito-core:5.8.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
     implementation 'com.google.googlejavaformat:google-java-format:1.19.2'
     implementation 'org.jsoup:jsoup:1.17.2'
     implementation 'com.github.javaparser:javaparser-core:3.25.5'
